<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#090808">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageButton
            android:id="@+id/left_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="#191717"
            android:contentDescription="@string/botiz"
            android:src="@drawable/ic_baseline_chevron_left_24">

        </ImageButton>

        <TextView
            android:id="@+id/titulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="150dp"
            android:layout_toStartOf="@+id/right_icon"
            android:layout_toEndOf="@id/left_icon"
            android:text="@string/toolbar"
            android:textColor="#fff"
            android:textSize="22sp">

        </TextView>

        <ImageButton
            android:id="@+id/right_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="#191717"
            android:contentDescription="@string/botder"
            android:src="@drawable/ic_baseline_menu_24">

        </ImageButton>


    </RelativeLayout>

</RelativeLayout>