<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="380dp"
        android:layout_height="96dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/bordes_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697">

        <ImageButton
            android:id="@+id/bucle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/bordes_suaves"
            android:contentDescription="@string/bucle"
            android:onClick="repetir"
            app:srcCompat="@drawable/ic_baseline_loop_24" />

        <ImageButton
            android:id="@+id/retroceder"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/bordes_suaves"
            android:contentDescription="@string/retroceder"
            android:onClick="anterior"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:onClick="PlayPause">

            <ImageButton
                android:id="@+id/play"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                android:background="@drawable/bordes_redondos"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/play"
                android:onClick="PlayPause"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="682dp" />

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"

                android:adjustViewBounds="false"
                android:background="@drawable/bordes_redondos"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/botonpausa"
                android:onClick="PlayPause"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_baseline_pause_24"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="682dp" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/avanzar"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/bordes_suaves"
            android:contentDescription="@string/avanzar"
            android:onClick="siguiente"
            app:srcCompat="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/bordes_suaves"
            android:contentDescription="@string/stop"
            android:onClick="stop"
            android:soundEffectsEnabled="false"
            app:srcCompat="@drawable/ic_baseline_stop_24" />
    </TableRow>

    <TableRow
        android:id="@+id/imagen"
        android:layout_width="380dp"
        android:layout_height="320dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bordes_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bordes_1"
            android:contentDescription="@string/contexto"
            app:srcCompat="@mipmap/creep" />
    </TableRow>

    <TableRow
        android:id="@+id/titulo"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen">

        <TextView
            android:id="@+id/textView"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:text="@string/texto" />
    </TableRow>



</androidx.constraintlayout.widget.ConstraintLayout>